src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_success_ddl_create_table.snap
---
source: src/tests/render_snapshots/overlays.rs
assertion_line: 310
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │ CREATE TABLE backup AS SELECT * FROM users                                                                                       │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [NORMAL]                                                                                               ✓ table created (0.04s)  │               │
│                ╰ ⌥Enter/F5: Run │ ^E: Explain │ i: Insert │ ^X: External Edit │ Tab/⇧Tab: Switch │ Esc: Close ────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
